# mcp-dynamic-schema

./: .gitignore  README.md  prek.toml  pyproject.toml  server.py
