[project]
name = "mcp-dynamic-schema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp[openai]>=3.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "prek>=0.3.5",
    "ruff>=0.15.6",
]
